# demo-package

./: README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  sync.yml
mycalculator/: calculator.py
