[build-system]
requires = ["setuptools", "wheel"]

[metadata]
name = "your-package-name"
version = "0.1.0"
description = "Your package description"
author = "Your Name"
author_email = "youremail@example.com"
license = "MIT"

[options]
packages = find:

[options.package_data]
your_package_name = ['*.txt']

[options.extras_require]
dev =
  ["pytest>=6.2.4"]
