[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "your-package-name"
version = "0.1.0"
description = "Your package description"
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[options]
packages = ["your-package-name"]

[options.package_data]
your_package_name = ['*.txt',]

[options.extras_require]
dev = [
  "pytest>=6.2.4",
]
